@@ -22,6 +22,6 @@
       li.task .#{key} { background:#{value}; }
 
   - if models.include?(:user)
-    li.user .admin     { background: lightpink; }
+    li.user .admin     { background: lightblue; }
     li.user .suspended { background: gainsboro; }
     li.user .active    { background: lightgreen; }
