@@ -1,8 +1,8 @@
 if @user.errors.empty?
   page.call "crm.flip_form", :change_password
   page.call "crm.set_title", :change_password, "My Profile"
-  page[:flash_notice].replace_html flash[:notice]
-  page.call "crm.flash", :flash_notice
+  page[:flash].replace_html flash[:notice]
+  page.call "crm.flash", :notice
   flash[:notice] = nil
 else
   page[:change_password].replace_html :partial => "password"
