@@ -14,7 +14,7 @@ describe "/tasks/create.js.rjs" do
         assigns[:task] = @task = stub_task(view)
         assigns[:task_total] = stub_task_total(view)
         request.env["HTTP_REFERER"] = "http://localhost/tasks?view=#{view}"
-        render "tasks/create.js.rjs"
+        render
       end
 
       it "should hide [Create Task] form and insert task partial" do
@@ -46,17 +46,17 @@ describe "/tasks/create.js.rjs" do
     assigns[:view] = "pending"
     assigns[:task] = Factory(:task, :id => 42, :assignee => Factory(:user))
     request.env["HTTP_REFERER"] = "http://localhost/tasks"
-    render "tasks/create.js.rjs"
+    render
     
-    response.should include_text('$("flash_notice").update(')
-    response.should include_text('crm.flash("flash_notice", true)')
+    response.should include_text('$("flash").update(')
+    response.should include_text('crm.flash("notice", true)')
   end
 
   it "should update recent items when assigning a task from pending tasks view" do
     assigns[:view] = "pending"
     assigns[:task] = Factory(:task, :id => 42, :assignee => Factory(:user))
     request.env["HTTP_REFERER"] = "http://localhost/tasks"
-    render "tasks/create.js.rjs"
+    render
 
     response.should have_rjs("recently") do |rjs|
       with_tag("div[class=caption]", :text => "Recent Items")
@@ -67,17 +67,17 @@ describe "/tasks/create.js.rjs" do
     assigns[:view] = "assigned"
     assigns[:task] = Factory(:task, :id => 42, :assignee => nil)
     request.env["HTTP_REFERER"] = "http://localhost/tasks?view=assigned"
-    render "tasks/create.js.rjs"
+    render
     
-    response.should include_text('$("flash_notice").update(')
-    response.should include_text('crm.flash("flash_notice", true)')
+    response.should include_text('$("flash").update(')
+    response.should include_text('crm.flash("notice", true)')
   end
 
   it "should update recent items when creating a pending task from assigned tasks view" do
     assigns[:view] = "assigned"
     assigns[:task] = Factory(:task, :id => 42, :assignee => nil)
     request.env["HTTP_REFERER"] = "http://localhost/tasks?view=assigned"
-    render "tasks/create.js.rjs"
+    render
 
     response.should have_rjs("recently") do |rjs|
       with_tag("div[class=caption]", :text => "Recent Items")
@@ -90,7 +90,7 @@ describe "/tasks/create.js.rjs" do
         @task = Factory(:task, :id => 42)
         assigns[:view] = view
         assigns[:task] = @task
-        render "tasks/create.js.rjs"
+        render
       end
 
       it "should update tasks title" do
@@ -114,7 +114,7 @@ describe "/tasks/create.js.rjs" do
 
   it "create failure: should re-render [create.html.haml] template in :create_task div" do
     assigns[:task] = Factory.build(:task, :name => nil) # make it invalid
-    render "tasks/create.js.rjs"
+    render
 
     response.should include_text('$("create_task").visualEffect("shake"')
   end
